fix alignment of legend

--- a/meta/style.css
+++ b/meta/style.css
@@ -44,6 +44,7 @@ a img { border:none; }
     width:200px;
     float:left;
     padding-top: inherit;
+    margin-left: 20%;
 }
 #content p {  }
 
